Added login to add books to library

--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,59 @@ h1 {
 .library {
     display: flex;
     height: 1000px;
-    width: 500px;
+    width: auto;
+    max-width: 800px;
     border: 1px solid black;
     margin: 20px auto;
     align-content: flex-start;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+    gap: 20px
+}
+
+button {
+    display: block;
+    text-align: center;
+    margin: auto;
+}
+
+.read {
+    background-color: red;
+    color: white;
 }
 
 .card {
     border: 1px solid red;
     white-space: pre-line;
+    width: 200px;
+    padding: 10px;
+    margin: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 15% auto;
+    width: 50%;
+    border: 1px solid black;
+    background-color: white;
+    padding: 20px;
+
+}
+
+input{
+    color: blac;
+}
+
+.form-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left:0;
+    top:0;
+    border: 1px solid black;
+    display: none;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.4)
 }
